--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a href="index.html"><svg><use xlink:href="images/logo.svg#logo-alt"></use></svg></a>
             </div>
             <h1>MyPantry, Mi Despensa.</h1>
-            <p class="sub-heading">Form &amp; Una Aplicacion que permite el ingreso de tus productos, para luego poder revisar los datos en cualquier situación y recibir alertas sobre fecha de vencimiento o stock crítico..</p>
+            <p class="sub-heading">Una aplicación para ayudarte a gestionar los alimentos de tu hogar. Revisa el stock de tu cocina en cualquier momento y lugar, o se alertado sobre sus prontas fechas de vencimiento o bajo stock.</p>
             <a class="store-link store-link--apple" href="#"><img src="images/buttons/app-store.svg" alt="Download on the App Store" width="200"></a>
             <a class="store-link store-link--google" href="#"><img src="images/buttons/google-play.svg" alt="Get it on Google Play" width="200"></a>
           </div>
@@ -79,7 +79,7 @@
         <div class="row centered">
           <div class="heading col-12 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
             <h2>Controla tus viveres</h2>
-            <p>Con MyPantry la información sobre tus víveres esta al alcance de tu smartphone. Así puedes pasar mas tiempo haciendo lo que te gusta.</p>
+            <p>Con MyPantry la información de tus víveres esta al alcance de tu Smartphone. Pasa más tiempo haciendo lo que te gusta y menos ordenando y pensando en que comprar para la semana.</p>
           </div>
         </div><!-- /row -->
 
@@ -99,7 +99,7 @@
             </div>
             <div class="text">
               <h4>Inventario</h4>
-              <p class="medium">User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <p class="medium">El inventario de tu cocina en tiempo real utilizando uno o mas Smartphones.</p>
             </div>
           </div>
         </div><!-- /row -->
@@ -119,7 +119,7 @@
               <i data-feather="life-buoy"></i>
             </div>
             <div class="text">
-              <h4>24/7 Support</h4>
+              <h4>Soporte 24/7</h4>
               <p class="medium">Nanotechnology immersion along the information highway will close the loop.</p>
             </div>
           </div>
